Maybe thats initial commit...

--- a/misc.html
+++ b/misc.html
@@ -320,7 +320,7 @@ $(document).ready(function () {
 
 <div id="hello-world" class="section level1">
 <h1>Hello World</h1>
-<p>Lorem ipsum dolor sit amet</p>
+<p>Lorem ipsum dolor sit amet misc</p>
 </div>
 
 
