--- a/biotech_docs.html
+++ b/biotech_docs.html
@@ -276,14 +276,13 @@ $(document).ready(function () {
         <li>
   <a href="index.html">Jakub J. Guzek</a>
 </li>
-<li class="dropdown-header">Documents</li>
 <li>
   <a href="biotech_docs.html">Biotechnology Course</a>
 </li>
 <li>
   <a href="misc.html">Miscellaneous Projects</a>
 </li>
-<li class="dropdown-header">*Curriculum vitae*</li>
+<li class="dropdown-header">Curriculum vitae</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
