--- a/cv.html
+++ b/cv.html
@@ -308,7 +308,7 @@ $(document).ready(function () {
 
 <div id="hello-world" class="section level1">
 <h1>Hello World</h1>
-<p>Lorem ipsum dolor sit amet <em>Curriculum vitae</em></p>
+<p>Lorem ipsum dolor sit amet Curriculum vitaex</p>
 </div>
 
 
