--- a/misc.html
+++ b/misc.html
@@ -282,7 +282,9 @@ $(document).ready(function () {
 <li>
   <a href="misc.html">Miscellaneous Projects</a>
 </li>
-<li class="dropdown-header">Curriculum vitae</li>
+<li>
+  <a href="cv.html">Curriculum vitae</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
