--- a/misc.html
+++ b/misc.html
@@ -308,9 +308,8 @@ $(document).ready(function () {
 </div>
 
 
-<div id="hello-world" class="section level1">
-<h1>Hello World</h1>
-<p>Lorem ipsum dolor sit amet misc</p>
+<div id="todo" class="section level1">
+<h1>TODO</h1>
 </div>
 
 
