--- a/biotech_docs.html
+++ b/biotech_docs.html
@@ -310,6 +310,7 @@ $(document).ready(function () {
 
 <div id="todo" class="section level1">
 <h1>TODO</h1>
+<p><a href="jakubguzek.github.io/matematyka2.pdf" target="_blank">PDF.</a></p>
 </div>
 
 
