--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 
-<title>Jakub J. Guzek</title>
+<title>index.utf8.md</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -277,7 +277,7 @@ $(document).ready(function () {
   <a href="index.html">Jakub J. Guzek</a>
 </li>
 <li>
-  <a href="biotech_docs.html">Biotechnology Course</a>
+  <a href="biotech_docs.html">Biotechnology Course Notes</a>
 </li>
 <li>
   <a href="misc.html">Miscellaneous Projects</a>
@@ -303,14 +303,18 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Jakub J. Guzek</h1>
 
 </div>
 
 
-<div id="hello-world" class="section level1">
-<h1>Hello World</h1>
-<p>Lorem ipsum dolor sit amet</p>
+<div id="general" class="section level1">
+<h1>General</h1>
+<p>I am undergraduate student on biotechnology degree at <a href="http://www.sggw.pl/en/">Warsaw University of Life Sciences</a> interested in a bunch of academic fields. I’m planning on learning more about biostatistics, bioinformatics and academic work in general. This website is mainly repository and presentation of my learning materials that I make for myself and others and of my miscellaneous projects – not necessarily associated with my degree course.</p>
+<p>Recently I started to take interest in optimizing <em>workflow</em> on my computer and learning various software programs that enable it. This led to me switching from Windows and OSX to <a href="https://www.gnu.org/">GNU/Linux</a> for my main desktop OS. This also caused me to change my views on so called <a href="https://en.wikipedia.org/wiki/Proprietary_software">proprietary software</a>, or to actually develop any views on this topic as I was indifferent before I took any interest in it. Because of that I am leaning towards using as much open source programs as it is convenient to (I am of opinion that using only open source programs is cumbersome). Below you can find a general list of things that I use daily for my work.</p>
+<div id="software-i-use" class="section level3">
+<h3>Software I use</h3>
+<p><strong>Primary OS:</strong> Arch Linux <strong>SEcondary OS’es:</strong> macOS 10.14 Mojave, Windows 10 <strong>All purpose text editor:</strong> Vim/Neovim <strong>Typesetting engine:</strong> LaTeX and R markdown <strong>Scriptiong Languages:</strong> Python, shellscript (bash) <strong>Version Control System:</strong> git <strong>Office suite:</strong> LibreOffice, MS Office</p>
+</div>
 </div>
 
 
