--- a/cv.html
+++ b/cv.html
@@ -277,7 +277,7 @@ $(document).ready(function () {
   <a href="index.html">Jakub J. Guzek</a>
 </li>
 <li>
-  <a href="biotech_docs.html">Biotechnology Course</a>
+  <a href="biotech_docs.html">Biotechnology Course Notes</a>
 </li>
 <li>
   <a href="misc.html">Miscellaneous Projects</a>
