--- a/index.html
+++ b/index.html
@@ -313,7 +313,13 @@ $(document).ready(function () {
 <p>Recently I started to take interest in optimizing <em>workflow</em> on my computer and learning various software programs that enable it. This led to me switching from Windows and OSX to <a href="https://www.gnu.org/">GNU/Linux</a> for my main desktop OS. This also caused me to change my views on so called <a href="https://en.wikipedia.org/wiki/Proprietary_software">proprietary software</a>, or to actually develop any views on this topic as I was indifferent before I took any interest in it. Because of that I am leaning towards using as much open source programs as it is convenient to (I am of opinion that using only open source programs is cumbersome). Below you can find a general list of things that I use daily for my work.</p>
 <div id="software-i-use" class="section level3">
 <h3>Software I use</h3>
-<p><strong>Primary OS:</strong> Arch Linux <strong>SEcondary OS’es:</strong> macOS 10.14 Mojave, Windows 10 <strong>All purpose text editor:</strong> Vim/Neovim <strong>Typesetting engine:</strong> LaTeX and R markdown <strong>Scriptiong Languages:</strong> Python, shellscript (bash) <strong>Version Control System:</strong> git <strong>Office suite:</strong> LibreOffice, MS Office</p>
+<p><strong>Primary OS:</strong> Arch Linux</p>
+<p><strong>Secondary OS’es:</strong> macOS 10.14 Mojave, Windows 10</p>
+<p><strong>All purpose text editor:</strong> Vim/Neovim</p>
+<p><strong>Typesetting engine:</strong> LaTeX and R markdown</p>
+<p><strong>Scriptiong Languages:</strong> Python, shellscript (bash)</p>
+<p><strong>Version Control System:</strong> git</p>
+<p><strong>Office suite:</strong> LibreOffice, MS Office</p>
 </div>
 </div>
 
