--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
+<meta name="author" content="jakub.j.guzek@gmail.com" />
 
 
-<title>index.utf8.md</title>
+<title>Jakub J. Guzek</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -303,6 +304,8 @@ $(document).ready(function () {
 
 
 
+<h1 class="title toc-ignore">Jakub J. Guzek</h1>
+<h4 class="author"><a href="mailto:jakub.j.guzek@gmail.com" class="email">jakub.j.guzek@gmail.com</a></h4>
 
 </div>
 
