--- a/biotech_docs.html
+++ b/biotech_docs.html
@@ -308,9 +308,14 @@ $(document).ready(function () {
 </div>
 
 
-<div id="todo" class="section level1">
-<h1>TODO</h1>
-<p><a href="jakubguzek.github.io/matematyka2.pdf" target="_blank">PDF.</a></p>
+<div id="biotechnology-course-learning-materials" class="section level1">
+<h1>Biotechnology course learning materials</h1>
+<p>Below are materials and notes I made. All of them are made with either \LaTeX\ or R Markdown unless stated otherwise. If the source for a piece of text is not explicitly referenced it means it comes from a lecture in most cases. Those notes are not guaranteed to be flawless and they not only <u>may</u> but <u>will</u> contain some errors of various magnitude. I of course try to make them as reliable as I can, but there will always be mistakes.</p>
+<p>You are welcome to report mistakes by sending me an e-mail.</p>
+<div id="first-year" class="section level2">
+<h2>First year</h2>
+<p><a ref="jakubguzek.github.io/pdfs/Chemia\ Fizyczna.pdf" target="_blank">"Chemia Fizyczna.pdf</a> <a ref="jakubguzek.github.io/pdfs/Etyka.pdf" target="_blank">Etyka.pdf</a> <a ref="jakubguzek.github.io/pdfs/Matematyka\ I.pdf" target="_blank">Matematyka I.pdf</a> <a ref="jakubguzek.github.io/pdfs/Matematyka\ II.pdf" target="_blank">Matematyka II.pdf</a> <a ref="jakubguzek.github.io/pdfs/Psychologia.pdf" target="_blank">Psychologia.pdf</a></p>
+</div>
 </div>
 
 
