--- a/biotech_docs.html
+++ b/biotech_docs.html
@@ -314,11 +314,11 @@ $(document).ready(function () {
 <p>You are welcome to report mistakes by sending me an e-mail.</p>
 <div id="first-year" class="section level2">
 <h2>First year</h2>
-<p><a ref="jakubguzek.github.io/pdfs/chemia_fizyczna.pdf" target="_blank">Chemia Fizyczna.pdf</a></p>
-<p><a ref="jakubguzek.github.io/pdfs/etyka.pdf" target="_blank">Etyka.pdf</a></p>
-<p><a ref="jakubguzek.github.io/pdfs/matematyka1.pdf" target="_blank">Matematyka I.pdf</a></p>
-<p><a ref="jakubguzek.github.io/pdfs/matematyka1.pdf" target="_blank">Matematyka II.pdf</a></p>
-<p><a ref="jakubguzek.github.io/pdfs/psychologia.pdf" target="_blank">Psychologia.pdf</a></p>
+<p><a href="jakubguzek.github.io/pdfs/chemia_fizyczna.pdf" target="_blank">Chemia Fizyczna.pdf</a></p>
+<p><a href="jakubguzek.github.io/pdfs/etyka.pdf" target="_blank">Etyka.pdf</a></p>
+<p><a href="jakubguzek.github.io/pdfs/matematyka1.pdf" target="_blank">Matematyka I.pdf</a></p>
+<p><a href="jakubguzek.github.io/pdfs/matematyka1.pdf" target="_blank">Matematyka II.pdf</a></p>
+<p><a href="jakubguzek.github.io/pdfs/psychologia.pdf" target="_blank">Psychologia.pdf</a></p>
 </div>
 </div>
 
