--- a/biotech_docs.html
+++ b/biotech_docs.html
@@ -312,13 +312,16 @@ $(document).ready(function () {
 <h1>Biotechnology course learning materials</h1>
 <p>Below are materials and notes I made. All of them are made with either LaTeX or R Markdown unless stated otherwise. If the source for a piece of text is not explicitly referenced it means it comes from a lecture in most cases. Those notes are not guaranteed to be flawless and they not only <u>may</u> but <u>will</u> contain some errors of various magnitude. I of course try to make them as reliable as I can, but there will always be mistakes.</p>
 <p>You are welcome to report mistakes by sending me an e-mail.</p>
+<p>At the moment most of the content is in polish language but I will try to gradually add english translations.</p>
 <div id="first-year" class="section level2">
 <h2>First year</h2>
-<p><a href="jakubguzek.github.io/pdfs/chemia_fizyczna.pdf" target="_blank">Chemia Fizyczna.pdf</a></p>
-<p><a href="jakubguzek.github.io/pdfs/etyka.pdf" target="_blank">Etyka.pdf</a></p>
-<p><a href="jakubguzek.github.io/pdfs/matematyka1.pdf" target="_blank">Matematyka I.pdf</a></p>
-<p><a href="jakubguzek.github.io/pdfs/matematyka1.pdf" target="_blank">Matematyka II.pdf</a></p>
-<p><a href="jakubguzek.github.io/pdfs/psychologia.pdf" target="_blank">Psychologia.pdf</a></p>
+<ul>
+<li><p><a href="jakubguzek.github.io/pdfs/chemia_fizyczna.pdf" target="_blank">Chemia Fizyczna.pdf</a></p></li>
+<li><p><a href="jakubguzek.github.io/pdfs/etyka.pdf" target="_blank">Etyka.pdf</a></p></li>
+<li><p><a href="jakubguzek.github.io/pdfs/matematyka1.pdf" target="_blank">Matematyka I.pdf</a></p></li>
+<li><p><a href="jakubguzek.github.io/pdfs/matematyka1.pdf" target="_blank">Matematyka II.pdf</a></p></li>
+<li><p><a href="jakubguzek.github.io/pdfs/psychologia.pdf" target="_blank">Psychologia.pdf</a></p></li>
+</ul>
 </div>
 </div>
 
