--- a/biotech_docs.html
+++ b/biotech_docs.html
@@ -316,12 +316,25 @@ $(document).ready(function () {
 <div id="first-year" class="section level2">
 <h2>First year</h2>
 <ul>
-<li><p><a href="jakubguzek.github.io/pdfs/chemia_fizyczna.pdf" target="_blank">Chemia Fizyczna.pdf</a></p></li>
-<li><p><a href="jakubguzek.github.io/pdfs/etyka.pdf" target="_blank">Etyka.pdf</a></p></li>
-<li><p><a href="jakubguzek.github.io/pdfs/matematyka1.pdf" target="_blank">Matematyka I.pdf</a></p></li>
-<li><p><a href="jakubguzek.github.io/pdfs/matematyka1.pdf" target="_blank">Matematyka II.pdf</a></p></li>
-<li><p><a href="jakubguzek.github.io/pdfs/psychologia.pdf" target="_blank">Psychologia.pdf</a></p></li>
+<li><a href="jakubguzek.github.io/pdfs/chemia_fizyczna.pdf" target="_blank">Chemia Fizyczna.pdf</a></li>
+<li><a href="jakubguzek.github.io/pdfs/etyka.pdf" target="_blank">Etyka.pdf</a></li>
+<li><a href="jakubguzek.github.io/pdfs/matematyka1.pdf" target="_blank">Matematyka I.pdf</a></li>
+<li><a href="jakubguzek.github.io/pdfs/matematyka1.pdf" target="_blank">Matematyka II.pdf</a></li>
+<li><a href="jakubguzek.github.io/pdfs/psychologia.pdf" target="_blank">Psychologia.pdf</a></li>
 </ul>
+</div>
+<div id="appendices" class="section level2">
+<h2>Appendices</h2>
+<div id="physical-chemistry-reports" class="section level3">
+<h3>Physical chemistry reports</h3>
+<ul>
+<li><a href="jakubguzek.github.io/pdfs/cwiczenie_1_1.pdf" target="_blank">Ćwiczenie 1-1.pdf</a></li>
+<li><a href="jakubguzek.github.io/pdfs/cwiczenie_2_4.pdf" target="_blank">Ćwiczenie 2-4.pdf</a></li>
+<li><a href="jakubguzek.github.io/pdfs/cwiczenie_3_1.pdf" target="_blank">Ćwiczenie 3-1.pdf</a></li>
+<li><a href="jakubguzek.github.io/pdfs/cwiczenie_4_1.pdf" target="_blank">Ćwiczenia 4-1.pdf</a></li>
+<li><a href="jakubguzek.github.io/pdfs/cwiczenie_6_1.pdf" target="_blank">Ćwiczenie 6-1.pdf</a></li>
+</ul>
+</div>
 </div>
 </div>
 
