instalacja_R.html added

--- a/biotech_docs.html
+++ b/biotech_docs.html
@@ -329,6 +329,7 @@ $(document).ready(function () {
 <h3>Miscellaneous</h3>
 <ul>
 <li><a href="jakubguzek.github.io/pdfs/table.pdf" target="_blank">Tabela CSRN.pdf</a></li>
+<li><a href="jakubguzek.github.io/instalacja_R.html" target="_blank">Instalacja R – werscja rozszerzona</a></li>
 </ul>
 </div>
 </div>
