one addition to misc.html and cv.html

--- a/cv.html
+++ b/cv.html
@@ -10,6 +10,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
+<meta name="author" content=" jakub.j.guzek&amp;gmail.com" />
 
 
 <title>Jakub J. Guzek</title>
@@ -304,12 +305,23 @@ $(document).ready(function () {
 
 
 <h1 class="title toc-ignore">Jakub J. Guzek</h1>
+<h4 class="author"> jakub.j.guzek&amp;gmail.com</h4>
 
 </div>
 
 
-<div id="todo" class="section level1">
-<h1>TODO</h1>
+<p> Undergraduate student at Warsaw University of Life Sciences  608-016-850</p>
+<div id="experience" class="section level1">
+<h1>Experience</h1>
+<ul>
+<li><p><strong>2018 - Now</strong> Membership in Scientific Circle of Biotechnology – <em>KNBiotech</em></p>
+<p><em>Warsaw University of Life Sciences</em></p>
+<ul>
+<li><p><strong>2018</strong> Unpaid internship</p>
+<p><strong>FisCash – service center for cash registers.</strong></p>
+<p><strong>Office work that included usage of MS Office suite</strong></p></li>
+</ul></li>
+</ul>
 </div>
 
 
