--- a/cv.html
+++ b/cv.html
@@ -10,7 +10,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content=" jakub.j.guzek&amp;gmail.com" />
+<meta name="author" content=" jakub.j.guzek&amp;gmail.com" />
 
 
 <title>Jakub J. Guzek</title>
@@ -72,6 +72,7 @@ h6 {
 }
 </style>
 
+<link rel="stylesheet" href="font-awesome-5.1.0/css/all.css" type="text/css" />
 
 
 
@@ -305,22 +306,21 @@ $(document).ready(function () {
 
 
 <h1 class="title toc-ignore">Jakub J. Guzek</h1>
-<h4 class="author"> jakub.j.guzek&amp;gmail.com</h4>
+<h4 class="author"><i class="fa fa-envelope"></i> jakub.j.guzek&amp;gmail.com</h4>
 
 </div>
 
 
-<p> Undergraduate student at Warsaw University of Life Sciences  608-016-850</p>
+<p>Undergraduate student at Warsaw University of Life Sciences</p>
+<p> 608-016-850</p>
 <div id="experience" class="section level1">
 <h1>Experience</h1>
 <ul>
 <li><p><strong>2018 - Now</strong> Membership in Scientific Circle of Biotechnology – <em>KNBiotech</em></p>
-<p><em>Warsaw University of Life Sciences</em></p>
-<ul>
+<p><em>Warsaw University of Life Sciences</em></p></li>
 <li><p><strong>2018</strong> Unpaid internship</p>
 <p><strong>FisCash – service center for cash registers.</strong></p>
 <p><strong>Office work that included usage of MS Office suite</strong></p></li>
-</ul></li>
 </ul>
 </div>
 
