--- a/cv.html
+++ b/cv.html
@@ -311,16 +311,51 @@ $(document).ready(function () {
 </div>
 
 
-<p>Undergraduate student at Warsaw University of Life Sciences</p>
-<p> 608-016-850</p>
-<div id="experience" class="section level1">
-<h1>Experience</h1>
+<p><i class= "fa fa-addres-card"></i> Undergraduate student at Warsaw University of Life Sciences</p>
+<p><i class="fa fa-phone"></i> +48 608-016-850</p>
+<div id="experience" class="section level2">
+<h2>Experience</h2>
 <ul>
 <li><p><strong>2018 - Now</strong> Membership in Scientific Circle of Biotechnology – <em>KNBiotech</em></p>
 <p><em>Warsaw University of Life Sciences</em></p></li>
 <li><p><strong>2018</strong> Unpaid internship</p>
-<p><strong>FisCash – service center for cash registers.</strong></p>
-<p><strong>Office work that included usage of MS Office suite</strong></p></li>
+<p><em>FisCash – service center for cash registers.</em></p>
+<p><em>Office work that included usage of MS Office suite</em></p></li>
+</ul>
+</div>
+<div id="education" class="section level2">
+<h2>Education</h2>
+<ul>
+<li><p><strong>2018 - Now</strong> Biotechnology engineer degre course</p>
+<p><em>Warsaw University of Life Sciences</em></p></li>
+<li><p><strong>2015 - 2018</strong> High School</p>
+<p><em>XVIII Liceum Ogólnokształcące im. Jana Zamoyskiego w Warszawie</em></p></li>
+</ul>
+</div>
+<div id="skills" class="section level2">
+<h2>Skills</h2>
+<ul>
+<li>Experience with work on Windows, OSX (macOS) and Linux operating systems</li>
+<li>Basic knowledge of Python and bash scripting languages</li>
+<li>English at advanced (C1) level (no certificate)</li>
+<li>Experience with LaTeX and R markdown typesetting engines</li>
+<li>Experience in usage of MS and Libre office suites</li>
+<li>Basic knowledge of <strong>git</strong> Version Control System</li>
+</ul>
+</div>
+<div id="traits" class="section level2">
+<h2>Traits</h2>
+<ul>
+<li>Articulate and eager to learn new things</li>
+<li>Active and passionate in fields of interest</li>
+</ul>
+</div>
+<div id="hobbies" class="section level2">
+<h2>Hobbies</h2>
+<ul>
+<li>Literature</li>
+<li>Software</li>
+<li>Role-Playing games</li>
 </ul>
 </div>
 
