icon fix in cv.html

--- a/cv.html
+++ b/cv.html
@@ -311,7 +311,7 @@ $(document).ready(function () {
 </div>
 
 
-<p><i class= "fa fa-addres-card"></i> Undergraduate student at Warsaw University of Life Sciences</p>
+<p><i class= "fa fa-address-card"></i> Undergraduate student at Warsaw University of Life Sciences</p>
 <p><i class="fa fa-phone"></i> +48 608-016-850</p>
 <div id="experience" class="section level2">
 <h2>Experience</h2>
