--- a/instalacja_R.html
+++ b/instalacja_R.html
@@ -417,6 +417,9 @@ install.packages{&quot;agricolae&quot;, dependancies = TRUE}</code></pre>
 </ol>
 </div>
 
+<link rel="stylesheet" href="font-awesome-5.1.0/css/all.css">
+<i class="fa fa-envelope"></i>
+jakub.j.guzek@gmail.com
 
 
 
