--- a/misc.html
+++ b/misc.html
@@ -322,6 +322,9 @@ $(document).ready(function () {
 </div>
 </div>
 
+<link rel="stylesheet" href="font-awesome-5.1.0/css/all.css">
+<i class="fa fa-envelope"></i>
+jakub.j.guzek@gmail.com
 
 
 
