--- a/cv.html
+++ b/cv.html
@@ -364,6 +364,9 @@ $(document).ready(function () {
 </ul>
 </div>
 
+<link rel="stylesheet" href="font-awesome-5.1.0/css/all.css">
+<i class="fa fa-envelope"></i>
+jakub.j.guzek@gmail.com
 
 
 
