--- a/instalacja_R.html
+++ b/instalacja_R.html
@@ -417,7 +417,8 @@ install.packages{&quot;agricolae&quot;, dependancies = TRUE}</code></pre>
 </ol>
 </div>
 
-<link rel="stylesheet" href="font-awesome-5.1.0/css/all.css">
+<link rel="stylesheet" href="site_libs/font-awesome-5.1.0/css/all.css">
+<hr>
 <i class="fa fa-envelope"></i>
 jakub.j.guzek@gmail.com
 
