--- a/cv.html
+++ b/cv.html
@@ -364,7 +364,8 @@ $(document).ready(function () {
 </ul>
 </div>
 
-<link rel="stylesheet" href="font-awesome-5.1.0/css/all.css">
+<link rel="stylesheet" href="site_libs/font-awesome-5.1.0/css/all.css">
+<hr>
 <i class="fa fa-envelope"></i>
 jakub.j.guzek@gmail.com
 
