--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,4 @@
-<link rel="stylesheet" href="font-awesome-5.1.0/css/all.css">
+<link rel="stylesheet" href="site_libs/font-awesome-5.1.0/css/all.css">
+<hr>
 <i class="fa fa-envelope"></i>
 jakub.j.guzek@gmail.com
