--- a/misc.html
+++ b/misc.html
@@ -322,7 +322,8 @@ $(document).ready(function () {
 </div>
 </div>
 
-<link rel="stylesheet" href="font-awesome-5.1.0/css/all.css">
+<link rel="stylesheet" href="site_libs/font-awesome-5.1.0/css/all.css">
+<hr>
 <i class="fa fa-envelope"></i>
 jakub.j.guzek@gmail.com
 
