modification date test

--- a/instalacja_R.html
+++ b/instalacja_R.html
@@ -422,6 +422,8 @@ install.packages{&quot;agricolae&quot;, dependancies = TRUE}</code></pre>
 <i class="fa fa-envelope"></i>
 jakub.j.guzek@gmail.com
 
+javascript:alert(document.lastModified)
+
 
 
 </div>
