--- a/misc.html
+++ b/misc.html
@@ -327,6 +327,8 @@ $(document).ready(function () {
 <i class="fa fa-envelope"></i>
 jakub.j.guzek@gmail.com
 
+javascript:alert(document.lastModified)
+
 
 
 </div>
