--- a/index.html
+++ b/index.html
@@ -337,6 +337,8 @@ $(document).ready(function () {
 <i class="fa fa-envelope"></i>
 jakub.j.guzek@gmail.com
 
+javascript:alert(document.lastModified)
+
 
 
 </div>
