modification date test #2

--- a/cv.html
+++ b/cv.html
@@ -369,7 +369,9 @@ $(document).ready(function () {
 <i class="fa fa-envelope"></i>
 jakub.j.guzek@gmail.com
 
+<script language="javascript">
 javascript:alert(document.lastModified)
+</script>
 
 
 
