--- a/footer.html
+++ b/footer.html
@@ -3,4 +3,6 @@
 <i class="fa fa-envelope"></i>
 jakub.j.guzek@gmail.com
 
+<script language="javascript">
 javascript:alert(document.lastModified)
+</script>
