--- a/instalacja_R.html
+++ b/instalacja_R.html
@@ -422,7 +422,9 @@ install.packages{&quot;agricolae&quot;, dependancies = TRUE}</code></pre>
 <i class="fa fa-envelope"></i>
 jakub.j.guzek@gmail.com
 
+<script language="javascript">
 javascript:alert(document.lastModified)
+</script>
 
 
 
