--- a/misc.html
+++ b/misc.html
@@ -327,7 +327,9 @@ $(document).ready(function () {
 <i class="fa fa-envelope"></i>
 jakub.j.guzek@gmail.com
 
+<script language="javascript">
 javascript:alert(document.lastModified)
+</script>
 
 
 
