messing with js in footer

--- a/footer.html
+++ b/footer.html
@@ -5,6 +5,6 @@ jakub.j.guzek@gmail.com
 
 <p>
 <script language="javascript">
-javascript:alert(document.lastModified)
+javascript:document.write(document.lastModified)
 </script>
 </p>
