--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ jakub.j.guzek@gmail.com
 
 <p>
 <script language="javascript">
-javascript:alert(document.lastModified)
+javascript:document.write(document.lastModified)
 </script>
 </p>
 
