--- a/misc.html
+++ b/misc.html
@@ -329,7 +329,7 @@ jakub.j.guzek@gmail.com
 
 <p>
 <script language="javascript">
-javascript:alert(document.lastModified)
+javascript:document.write(document.lastModified)
 </script>
 </p>
 
