alignment of js output

--- a/footer.html
+++ b/footer.html
@@ -3,7 +3,7 @@
 <i class="fa fa-envelope"></i>
 jakub.j.guzek@gmail.com
 
-<p>
+<p style="text-align:right">
 <script language="javascript">
 javascript:document.write(document.lastModified)
 </script>
