html formatting in footer

--- a/footer.html
+++ b/footer.html
@@ -1,10 +1,11 @@
 <link rel="stylesheet" href="site_libs/font-awesome-5.1.0/css/all.css">
 <hr>
+<p style="text-align:left;">
 <i class="fa fa-envelope"></i>
 jakub.j.guzek@gmail.com
-
-<p style="text-align:right">
-<script language="javascript">
-javascript:document.write(document.lastModified)
-</script>
+<span style="float:right;">
+	<script language="javascript">
+	javascript:document.write(document.lastModified)
+	</script>
+</span>
 </p>
