--- a/instalacja_R.html
+++ b/instalacja_R.html
@@ -419,13 +419,13 @@ install.packages{&quot;agricolae&quot;, dependancies = TRUE}</code></pre>
 
 <link rel="stylesheet" href="site_libs/font-awesome-5.1.0/css/all.css">
 <hr>
-<i class="fa fa-envelope"></i>
-jakub.j.guzek@gmail.com
-
-<p>
-<script language="javascript">
-javascript:document.write(document.lastModified)
-</script>
+<p style="text-align:left;">
+<i class="fa fa-envelope"></i> jakub.j.guzek@gmail.com
+<span style="float:right;">
+	<script language="javascript">
+		javascript:document.write(document.lastModified)
+	</script>
+</span>
 </p>
 
 
