--- a/instalacja_R.html
+++ b/instalacja_R.html
@@ -419,7 +419,7 @@ install.packages{&quot;agricolae&quot;, dependancies = TRUE}</code></pre>
 
 <link rel="stylesheet" href="site_libs/font-awesome-5.1.0/css/all.css">
 <hr>
-<p style="text-align:left;">
+<p style="text-align:left; color: #444444;">
 <i class="fa fa-envelope"></i> jakub.j.guzek@gmail.com
 <span style="float:right;">
 	<script language="javascript">
