--- a/biotech_docs.html
+++ b/biotech_docs.html
@@ -343,7 +343,7 @@ $(document).ready(function () {
 
 <link rel="stylesheet" href="site_libs/font-awesome-5.1.0/css/all.css">
 <hr>
-<p style="text-align:left;">
+<p style="text-align:left; color: #444444;">
 <i class="fa fa-envelope"></i> jakub.j.guzek@gmail.com
 <span style="float:right;">
 	<script language="javascript">
