--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="site_libs/font-awesome-5.1.0/css/all.css">
 <hr>
-<p style="text-align:left; color: #444444;">
+<p style="text-align:left; color: #aaaaaa;">
 <i class="fa fa-envelope"></i> jakub.j.guzek@gmail.com
 <span style="float:right;">
 	<script language="javascript">
