--- a/cv.html
+++ b/cv.html
@@ -318,8 +318,8 @@ $(document).ready(function () {
 
 <p><i class= "fa fa-address-card"></i> Undergraduate student at Warsaw University of Life Sciences</p>
 <p><i class="fa fa-phone"></i> +48 608-016-850</p>
-<div id="experience" class="section level2">
-<h2>Experience</h2>
+<div id="experience" class="section level3">
+<h3>Experience</h3>
 <ul>
 <li><p><strong>2018 - Now</strong> Membership in Scientific Circle of Biotechnology – <em>KNBiotech</em></p>
 <p><em>Warsaw University of Life Sciences</em></p></li>
@@ -328,8 +328,8 @@ $(document).ready(function () {
 <p><em>Office work that included usage of MS Office suite</em></p></li>
 </ul>
 </div>
-<div id="education" class="section level2">
-<h2>Education</h2>
+<div id="education" class="section level3">
+<h3>Education</h3>
 <ul>
 <li><p><strong>2018 - Now</strong> Biotechnology engineer degre course</p>
 <p><em>Warsaw University of Life Sciences</em></p></li>
@@ -337,8 +337,8 @@ $(document).ready(function () {
 <p><em>XVIII Liceum Ogólnokształcące im. Jana Zamoyskiego w Warszawie</em></p></li>
 </ul>
 </div>
-<div id="skills" class="section level2">
-<h2>Skills</h2>
+<div id="skills" class="section level3">
+<h3>Skills</h3>
 <ul>
 <li>Experience with work on Windows, OSX (macOS) and Linux operating systems</li>
 <li>Basic knowledge of Python and bash scripting languages</li>
@@ -348,15 +348,15 @@ $(document).ready(function () {
 <li>Basic knowledge of <strong>git</strong> Version Control System</li>
 </ul>
 </div>
-<div id="traits" class="section level2">
-<h2>Traits</h2>
+<div id="traits" class="section level3">
+<h3>Traits</h3>
 <ul>
 <li>Articulate and eager to learn new things</li>
 <li>Active and passionate in fields of interest</li>
 </ul>
 </div>
-<div id="hobbies" class="section level2">
-<h2>Hobbies</h2>
+<div id="hobbies" class="section level3">
+<h3>Hobbies</h3>
 <ul>
 <li>Literature</li>
 <li>Software</li>
@@ -366,9 +366,9 @@ $(document).ready(function () {
 
 <link rel="stylesheet" href="site_libs/font-awesome-5.1.0/css/all.css">
 <hr>
-<p style="text-align:left; color: #444444;">
+<p style="text-align:left; color:#999999;">
 <i class="fa fa-envelope"></i> jakub.j.guzek@gmail.com
-<span style="float:right;">
+<span style="float:right; color:#999999;"> Last modified:
 	<script language="javascript">
 		javascript:document.write(document.lastModified)
 	</script>
