--- a/footer.html
+++ b/footer.html
@@ -2,7 +2,7 @@
 <hr>
 <p style="text-align:left; color:#999999;">
 <i class="fa fa-envelope"></i> jakub.j.guzek@gmail.com
-<span style="float:right;">
+<span style="float:right; color:#999999;"> Last modified:
 	<script language="javascript">
 		javascript:document.write(document.lastModified)
 	</script>
