--- a/instalacja_R.html
+++ b/instalacja_R.html
@@ -419,9 +419,9 @@ install.packages{&quot;agricolae&quot;, dependancies = TRUE}</code></pre>
 
 <link rel="stylesheet" href="site_libs/font-awesome-5.1.0/css/all.css">
 <hr>
-<p style="text-align:left; color: #444444;">
+<p style="text-align:left; color:#999999;">
 <i class="fa fa-envelope"></i> jakub.j.guzek@gmail.com
-<span style="float:right;">
+<span style="float:right; color:#999999;"> Last modified:
 	<script language="javascript">
 		javascript:document.write(document.lastModified)
 	</script>
