--- a/misc.html
+++ b/misc.html
@@ -324,9 +324,9 @@ $(document).ready(function () {
 
 <link rel="stylesheet" href="site_libs/font-awesome-5.1.0/css/all.css">
 <hr>
-<p style="text-align:left; color: #444444;">
+<p style="text-align:left; color:#999999;">
 <i class="fa fa-envelope"></i> jakub.j.guzek@gmail.com
-<span style="float:right;">
+<span style="float:right; color:#999999;"> Last modified:
 	<script language="javascript">
 		javascript:document.write(document.lastModified)
 	</script>
