Title formatting in biotech_docs and misc

--- a/misc.html
+++ b/misc.html
@@ -12,7 +12,7 @@
 
 
 
-<title>Jakub J. Guzek</title>
+<title>Miscellaneous Projects</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -309,17 +309,14 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Jakub J. Guzek</h1>
+<h1 class="title toc-ignore">Miscellaneous Projects</h1>
 
 </div>
 
 
-<div id="miscellaneous-projects" class="section level1">
-<h1>Miscellaneous Projects</h1>
 <div id="arch-linux-dotfiles" class="section level2">
 <h2>Arch Linux dotfiles</h2>
 <p>I keep <a href="https://github.com/jakubguzek/arch.dotfiles">Github repository</a> for configuration files that I use on my Arch Linux desktop and for my own scripts. The scripts are written to work on my machine and are not guaranteed to work on any other computer (at least for the time being). They are of course GNU/Linux specific and depend on various programs that I have installed.</p>
-</div>
 </div>
 
 <link rel="stylesheet" href="site_libs/font-awesome-5.1.0/css/all.css">
