--- a/biotech_docs.html
+++ b/biotech_docs.html
@@ -12,7 +12,7 @@
 
 
 
-<title>Jakub J. Guzek</title>
+<title>Biotechnology course learning materials</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -309,13 +309,11 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Jakub J. Guzek</h1>
+<h1 class="title toc-ignore">Biotechnology course learning materials</h1>
 
 </div>
 
 
-<div id="biotechnology-course-learning-materials" class="section level1">
-<h1>Biotechnology course learning materials</h1>
 <p>Below are materials and notes I made. All of them are made with either LaTeX or R Markdown unless stated otherwise. If the source for a piece of text is not explicitly referenced it means it comes from a lecture in most cases. Those notes are not guaranteed to be flawless and they not only <u>may</u> but <u>will</u> contain some errors of various magnitude. I of course try to make them as reliable as I can, but there will always be mistakes.</p>
 <p>You are welcome to report mistakes by sending me an e-mail.</p>
 <p>At the moment most of the content is in polish language but I will try to gradually add english translations. Source code for most of files can be found on my GitHub.</p>
@@ -337,7 +335,6 @@ $(document).ready(function () {
 <li><a href="jakubguzek.github.io/pdfs/table.pdf" target="_blank">Tabela CSRN.pdf</a></li>
 <li><a href="jakubguzek.github.io/instalacja_R.html" target="_blank">Instalacja R – werscja rozszerzona</a></li>
 </ul>
-</div>
 </div>
 </div>
 
