--- a/cv.html
+++ b/cv.html
@@ -321,7 +321,7 @@ $(document).ready(function () {
 <div id="experience" class="section level3">
 <h3>Experience</h3>
 <ul>
-<li><p><strong>2018 - Now</strong> Membership in Scientific Circle of Biotechnology – <em>KNBiotech</em></p>
+<li><p><strong>2018 - Now</strong> Membership in Scientific Club of Biotechnology – <em>KNBiotech</em></p>
 <p><em>Warsaw University of Life Sciences</em></p></li>
 <li><p><strong>2018</strong> Unpaid internship</p>
 <p><em>FisCash – service center for cash registers.</em></p>
@@ -334,7 +334,7 @@ $(document).ready(function () {
 <li><p><strong>2018 - Now</strong> Biotechnology engineer degre course</p>
 <p><em>Warsaw University of Life Sciences</em></p></li>
 <li><p><strong>2015 - 2018</strong> High School</p>
-<p><em>XVIII Liceum Ogólnokształcące im. Jana Zamoyskiego w Warszawie</em></p></li>
+<p><em>Zamoyski high school – XVIII Liceum Ogólnokształcące im. Jana Zamoyskiego w Warszawie</em></p></li>
 </ul>
 </div>
 <div id="skills" class="section level3">
