--- a/cv.html
+++ b/cv.html
@@ -10,7 +10,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content=" jakub.j.guzek&amp;gmail.com" />
+<meta name="author" content=" jakub.j.guzek@gmail.com" />
 
 
 <title>Jakub J. Guzek</title>
@@ -311,7 +311,7 @@ $(document).ready(function () {
 
 
 <h1 class="title toc-ignore">Jakub J. Guzek</h1>
-<h4 class="author"><i class="fa fa-envelope"></i> jakub.j.guzek&amp;gmail.com</h4>
+<h4 class="author"><i class="fa fa-envelope"></i> <a href="mailto:jakub.j.guzek@gmail.com" class="email">jakub.j.guzek@gmail.com</a></h4>
 
 </div>
 
