added dwm entry to misc

--- a/misc.html
+++ b/misc.html
@@ -318,6 +318,10 @@ $(document).ready(function () {
 <h2>Arch Linux dotfiles</h2>
 <p>I keep <a href="https://github.com/jakubguzek/arch.dotfiles">Github repository</a> for configuration files that I use on my Arch Linux desktop and for my own scripts. The scripts are written to work on my machine and are not guaranteed to work on any other computer (at least for the time being). They are of course GNU/Linux specific and depend on various programs that I have installed.</p>
 </div>
+<div id="my-newbie-dwm-fork" class="section level2">
+<h2>My newbie dwm fork</h2>
+<p>Recently I started using <a href="https://dwm.suckless.org/">dwm</a> which is one of [suckless programs](<BS><a href="https://en.wikipedia.org/wiki/Suckless.org" class="uri">https://en.wikipedia.org/wiki/Suckless.org</a>), Like all of suckless software it is configured by directly editing its source code, so any personal config is kind of unique fork. You can find my dwm config on my GitHub in dedicated <a href="https://github.com/jakubguzek/dwm">repository</a>.</p>
+</div>
 
 <link rel="stylesheet" href="site_libs/font-awesome-5.1.0/css/all.css">
 <hr>
