fixed formatting error

--- a/misc.html
+++ b/misc.html
@@ -320,7 +320,7 @@ $(document).ready(function () {
 </div>
 <div id="my-newbie-dwm-fork" class="section level2">
 <h2>My newbie dwm fork</h2>
-<p>Recently I started using <a href="https://dwm.suckless.org/">dwm</a> which is one of [suckless programs](<BS><a href="https://en.wikipedia.org/wiki/Suckless.org" class="uri">https://en.wikipedia.org/wiki/Suckless.org</a>), Like all of suckless software it is configured by directly editing its source code, so any personal config is kind of unique fork. You can find my dwm config on my GitHub in dedicated <a href="https://github.com/jakubguzek/dwm">repository</a>.</p>
+<p>Recently I started using <a href="https://dwm.suckless.org/">dwm</a> which is one of <a href="https://en.wikipedia.org/wiki/Suckless.org">suckless programs</a>, Like all of suckless software it is configured by directly editing its source code, so any personal config is kind of unique fork. You can find my dwm config on my GitHub in dedicated <a href="https://github.com/jakubguzek/dwm">repository</a>.</p>
 </div>
 
 <link rel="stylesheet" href="site_libs/font-awesome-5.1.0/css/all.css">
