--- a/biotech_docs.html
+++ b/biotech_docs.html
@@ -327,6 +327,14 @@ $(document).ready(function () {
 <li><a href="jakubguzek.github.io/pdfs/psychologia.pdf" target="_blank">Psychologia.pdf</a></li>
 </ul>
 </div>
+<div id="second-year-wip" class="section level2">
+<h2>Second year (WiP)</h2>
+<ul>
+<li><a href="jakubguzek.github.io/pdfs/biofizyka.pdf" target="_blank">Biofizyka.pdf</a></li>
+<li><a href="jakubguzek.github.io/pdfs/fizjologia_roślin.pdf" target="_blank">Fizjologia Roślin.pdf</a></li>
+<li><a href="jakubguzek.github.io/pdfs/inżynieria_procesów_biotechnologicznych.pdf" target="_blank">Inżynieria procesów biotechnologicznych.pdf</a></li>
+</ul>
+</div>
 <div id="appendices" class="section level2">
 <h2>Appendices</h2>
 <div id="miscellaneous" class="section level3">
