hyperlinked GitHub repo with texfiles

--- a/biotech_docs.html
+++ b/biotech_docs.html
@@ -316,7 +316,7 @@ $(document).ready(function () {
 
 <p>Below are materials and notes I made. All of them are made with either LaTeX or R Markdown unless stated otherwise. If the source for a piece of text is not explicitly referenced it means it comes from a lecture in most cases. Those notes are not guaranteed to be flawless and they not only <u>may</u> but <u>will</u> contain some errors of various magnitude. I of course try to make them as reliable as I can, but there will always be mistakes.</p>
 <p>You are welcome to report mistakes by sending me an e-mail.</p>
-<p>At the moment most of the content is in polish language but I will try to gradually add english translations. Source code for most of files can be found on my GitHub.</p>
+<p>At the moment most of the content is in polish language but I will try to gradually add english translations. Source code for most of files can be found in <a href="https://github.com/jakubguzek/texfiles">this GitHub repo</a></p>
 <div id="first-year" class="section level2">
 <h2>First year</h2>
 <ul>
