--- a/biotech_docs.html
+++ b/biotech_docs.html
@@ -333,6 +333,7 @@ $(document).ready(function () {
 <li><a href="jakubguzek.github.io/pdfs/biofizyka.pdf" target="_blank">Biofizyka.pdf</a></li>
 <li><a href="jakubguzek.github.io/pdfs/fizjologia_roślin.pdf" target="_blank">Fizjologia Roślin.pdf</a></li>
 <li><a href="jakubguzek.github.io/pdfs/inżynieria_procesów_biotechnologicznych.pdf" target="_blank">Inżynieria procesów biotechnologicznych.pdf</a></li>
+<li><a href="jakubguzek.github.io/pdfs/mikrobiologia.pdf" target="_blank">Mikrobiologia.pdf</a></li>
 </ul>
 </div>
 <div id="appendices" class="section level2">
