added one paragraph of text into 'Instalacja R'

--- a/instalacja_R.html
+++ b/instalacja_R.html
@@ -292,13 +292,13 @@ $(document).ready(function () {
         <li>
   <a href="https://www.linkedin.com/in/jakub-guzek-4270a0193/">
     <span class="fa fa-linkedin"></span>
-     
+
   </a>
 </li>
 <li>
   <a href="https://github.com/jakubguzek">
     <span class="fa fa-github"></span>
-     
+
   </a>
 </li>
       </ul>
@@ -407,6 +407,10 @@ install.packages{&quot;agricolae&quot;, dependancies = TRUE}</code></pre>
 <p>Na systemach linux problem ten można rozwiązać instalując front-end’owy kompilator dla fortran’u od GNU – gcc-fortran</p>
 <p>Przykład dla systemów Arch-based</p>
 <pre><code>sudo pacman -S gcc-fortran</code></pre>
+</div>
+<div id="inne" class="section level2">
+<h2>Inne</h2>
+<p>Generalnie instaloanie jakichkolwiek dodatkowych package'y w R to niesamowita przygoda, dlatego ba koniec po raz kolejny polecam źródła takie jak <a href="https://stackoverflow.com/">Stack Overflow</a> oraz cierpliwe szukanie w internecie;.</p>
 </div>
 </div>
 <div class="footnotes">
