--- a/instalacja_R.html
+++ b/instalacja_R.html
@@ -410,7 +410,7 @@ install.packages{&quot;agricolae&quot;, dependancies = TRUE}</code></pre>
 </div>
 <div id="inne" class="section level2">
 <h2>Inne</h2>
-<p>Generalnie instaloanie jakichkolwiek dodatkowych package'y w R to niesamowita przygoda, dlatego ba koniec po raz kolejny polecam źródła takie jak <a href="https://stackoverflow.com/">Stack Overflow</a> oraz cierpliwe szukanie w internecie;.</p>
+<p>Generalnie instaloanie jakichkolwiek dodatkowych package'y w R to niesamowita przygoda, dlatego na koniec po raz kolejny polecam źródła takie jak <a href="https://stackoverflow.com/">Stack Overflow</a> oraz cierpliwe szukanie w internecie;.</p>
 </div>
 </div>
 <div class="footnotes">
