--- a/misc.html
+++ b/misc.html
@@ -381,6 +381,7 @@ $(document).ready(function () {
 
 		main()
             </script>
+	  <input id="zone"><button id="mybutton">click !</button>
         </body>
 </div>
 
